test/2/type/struct-positional-follows-label-type.ploy
main = {
  _:(a:Int Int) = (0 0)
}
